--- a/cvhtml.html
+++ b/cvhtml.html
@@ -19,7 +19,7 @@
                 <p><strong>Mail :</strong> evanruggeri@outlook.com</p>
                 <p><strong>Date de naissance :</strong> 25/10/2006</p>
             </div>
-            <div class="D">
+            <div class="textedeprésentation">
                 <p>Ceci sera un texte de présentation : Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Etiam in
                     accumsan lorem. Donec tincidunt sapien in leo
